# Password-Generator-Using-Rust

./: .gitignore  CREDITS.md  Cargo.toml  HONESTY.md  PERFORMANCE.md  README.md  output.hashes  output.txt  output1.hashes
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: handle_crack.rs  handle_upload.rs  lib.rs
core/: Cargo.toml
core/src/: algorithms.rs  crack.rs  dump_hashes.rs  dump_rainbow_table.rs  generate_hashes.rs  generate_passwords.rs  generate_rainbow_table.rs  hash.rs  lib.rs  radix_type.rs  reduction.rs  utils.rs
rainbow/: md5.rt  sha256.rt  sha3_512.hashes  sha3_512.rt
server/: Cargo.toml
server/src/: cache_memory.rs  compute_threads.rs  crack_hashes.rs  lib.rs  save_rainbow_table.rs  server.rs
