[package]
name = "hashassin-core"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"  # Random password generation
crossbeam-channel = "0.5.14"
md5 = "0.7.0"
sha256 = "1.5.0"
rs_sha3_512 = "0.1.2"
rayon = "1.8"
clap = { version = "4.4", features = ["derive"] }
scrypt = "0.11.0"
thiserror = "2.0.12"
hex = "0.4"
sha2 = "0.10"
sha3 = "0.10"
log = "0.4"
env_logger = "0.11.7" 
rand_core ="0.9.0"
password-hash = "0.5"